# leb3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.bat
cmake/: CMakeBuildSettings.cmake  CMakeMacros.cmake  CMakePlatforms.cmake  FindD3D12.cmake
demo/include/graphics/: descriptors.h  dx12_backend.h  dx12_containers.h  dx12_helpers.h  event_collector.h  types.h
demo/include/imgui/: imgui_impl_win32.h
demo/include/math/: operators.h  types.h
demo/include/render_pipeline/: camera.h  camera_controller.h  constant_buffers.h  frustum_renderer.h  grid_renderer.h  leb_renderer.h  morton_cache.h  rendering_mode.h  sky.h  volume_pipeline.h
demo/include/rendering/: aabb.h  frustum.h
demo/include/tools/: imgui_helpers.h  profiling_helper.h  shader_utils.h  stream.h  stream.inl  string_utilities.h
demo/include/volume/: grid_volume.h  heuristic_cache.h  leb_3d_cache.h  leb_3d_eval.h  leb_volume.h  leb_volume_gpu.h  volume_generation.h
demo/src/: CMakeLists.txt
demo/src/graphics/: dx12_backend_command_buffer.cpp  dx12_helpers.cpp  (+11 more)
projects/: CMakeLists.txt  convert_grid_to_leb3d.cpp  render_volume.cpp
shaders/: AccumulateFrame.compute  Blit.graphics  Frustum.graphics  TonemapFrame.compute
shaders/Grid/: Density.compute  ForwardPT.compute  Rasterizer.graphics
shaders/LEB/: Density.compute  ForwardPT.compute  IntersectBVH.compute  Rasterizer.graphics
shaders/Sky/: SkyPreCompute.compute
shaders/shader_lib/: common.hlsl  constant_buffers.hlsl  grid_utilities.hlsl  intersection.hlsl  leb_utilities.hlsl  rand.hlsl  sky.hlsl  sky_utilities.hlsl
(+22 files in other folders)
